--- a/ttrss.nginx.conf
+++ b/ttrss.nginx.conf
@@ -10,7 +10,7 @@ server {
 
 	location ~ \.php$ {
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass unix:/var/run/php5-fpm.sock;
+		fastcgi_pass localhost:9000;
 		fastcgi_index index.php;
 		include fastcgi_params;
 	}
